added javascript alert

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- coin  -->
 
             <div class="flex gap-2 bg-[#41FF6B1A] text-black px-3 py-1 md:px-5 md:py-2 rounded-full">
-                <span>100</span>
+                <span id="coin">100</span>
                 <img src="./assets/coin.png" class="w-6" alt="">
             </div>
 
@@ -101,7 +101,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class=" call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -313,7 +313,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -348,7 +348,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                     <p class="text-gray-400">Bangladesh Railway</p>
                 </div>
                 <div class="mt-6">
-                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                    <h1 class="text-black font-bold text-2xl mb-1">163</h1>
                 </div>
                 <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
                     <h2 class="text-gray-600 text-xs">Travel</h2>
@@ -383,7 +383,7 @@
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="call-btn p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -398,6 +398,8 @@
                 <button
                     class="text-[1rem] md:text-xl px-2 py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear
                 </button>
+            </div>
+            <div id="call-history" class="my-5">
             </div>
         </aside>
     </main>
