added calling history and copy btn work

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- copy  -->
 
             <div class="flex gap-2 bg-[#00A63E] text-white px-3 py-1 md:px-9 md:py-2 rounded-full">
-                <span>0</span>
+                <span id="copy">0</span>
                 <p>Copy</p>
             </div>
         </div>
@@ -66,7 +66,7 @@
             People’s Republic of Bangladesh</p>
     </section>
 
-    <!-- card section  -->
+    <!-- main section  -->
 
     <main class="grid grid-cols-12 w-11/12 mx-auto my-12 gap-1 md:gap-5">
         <!-- card-container -->
@@ -96,7 +96,7 @@
                 <div class="flex gap-2 md:gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -131,7 +131,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -167,7 +167,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -202,7 +202,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -237,7 +237,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -273,7 +273,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -308,7 +308,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -343,7 +343,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -378,7 +378,7 @@
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="copy-btn p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
@@ -391,13 +391,12 @@
 
         </section>
         <!-- right section  -->
-        <aside class="call-history col-span-4 md:col-span-3 p-1 md:p-5 bg-white shadow-xl rounded-xl">
+        <aside class=" col-span-4 md:col-span-3 p-1 md:p-5 bg-white shadow-xl rounded-xl">
             <div class="flex justify-center md:justify-between items-center ">
                 <h4 class="md:text-[1.25rem] font-semibold"> <i class="fa-regular fa-clock"></i> Call History</h4>
 
-                <button
-                    class="text-[1rem] md:text-xl px-2 py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear
-                </button>
+                <button id="clear"
+                    class="text-[1rem] md:text-xl px-2 py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear</button>
             </div>
             <div id="call-history" class="my-5">
             </div>
