--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <p class="text-gray-400">Fire Service</p>
                 </div>
                 <div class="mt-6">
-                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                    <h1 class="text-black font-bold text-2xl mb-1">102</h1>
                 </div>
                 <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
                     <h2 class="text-gray-600 text-xs">Fire</h2>
@@ -392,8 +392,9 @@
         </section>
         <!-- right section  -->
         <aside class=" col-span-4 md:col-span-3 p-1 md:p-5 bg-white shadow-xl rounded-xl">
-            <div class="flex justify-center md:justify-between items-center ">
-                <h4 class="md:text-[1.25rem] font-semibold"> <i class="fa-regular fa-clock"></i> Call History</h4>
+            <div class="flex justify-center md:justify-between items-center gap-1">
+                <h4 class="text-sm md:text-[1.25rem] font-semibold"> <i class="fa-regular fa-clock"></i> Call History
+                </h4>
 
                 <button id="clear"
                     class="text-[1rem] md:text-xl px-2 py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear</button>
