--- a/index.html
+++ b/index.html
@@ -393,11 +393,12 @@
         <!-- right section  -->
         <aside class=" col-span-4 md:col-span-3 p-1 md:p-5 bg-white shadow-xl rounded-xl">
             <div class="flex justify-center md:justify-between items-center gap-1">
-                <h4 class="text-sm md:text-[1.25rem] font-semibold"> <i class="fa-regular fa-clock"></i> Call History
+                <h4 class="text-sm md:text-[1rem] lg:text-[1.1rem] font-semibold"> <i class="fa-regular fa-clock"></i>
+                    Call History
                 </h4>
 
                 <button id="clear"
-                    class="text-[1rem] md:text-xl px-2 py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear</button>
+                    class="text-sm md:text-[0.9rem] lg:text-[1rem] md:text-xl px-2 py-1 lg:px-3.5 bg-[#00a63e] text-white rounded md:rounded-md lg:rounded-xl hover:cursor-pointer hover:bg-blue-500 ">Clear</button>
             </div>
             <div id="call-history" class="my-5">
             </div>
